timer added, level is now responsible for gameobjects, different minor adjustments

--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -174,8 +174,10 @@
     <ClCompile Include="src\utils\GLUtils.cpp" />
     <ClCompile Include="src\renderer\TextureManager.cpp" />
     <ClCompile Include="src\renderer\materials\default\StaticObjectsMaterial.cpp" />
+    <ClCompile Include="src\application\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\GameLayer.h" />
     <ClInclude Include="src\game\GameManager.h" />
     <ClInclude Include="src\game\game-objects\Enemy.h" />
     <ClInclude Include="src\game\game-objects\HealthPouch.h" />
@@ -186,7 +188,6 @@
     <ClInclude Include="src\game\game-objects\Wall.h" />
     <ClInclude Include="src\game\GameObject.h" />
     <ClInclude Include="src\game\Level.h" />
-    <ClInclude Include="src\game\MapLayer.h" />
     <ClInclude Include="src\renderer\shaders\ShaderManager.h" />
     <ClInclude Include="src\renderer\font\Font.h" />
     <ClInclude Include="src\renderer\font\FontLoader.h" />
@@ -206,16 +207,17 @@
     <ClInclude Include="src\renderer\Renderer.h" />
     <ClInclude Include="src\application\InputManager.h" />
     <ClInclude Include="src\renderer\Vertex.h" />
-    <ClInclude Include="src\game\SceneLayer.h" />
     <ClInclude Include="src\renderer\materials\default\TextureHolderMaterial.h" />
     <ClInclude Include="src\renderer\ui\Text.h" />
     <ClInclude Include="src\renderer\TextureManager.h" />
     <ClInclude Include="src\renderer\materials\default\StaticObjectsMaterial.h" />
     <ClInclude Include="src\game\UILayer.h" />
     <ClInclude Include="src\utils\GLIncludes.h" />
+    <ClInclude Include="src\utils\IdentifierManager.h" />
     <ClInclude Include="src\utils\Randomizer.h" />
     <ClInclude Include="src\application\Window.h" />
     <ClInclude Include="src\renderer\Texture.h" />
+    <ClInclude Include="src\application\Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\atlas.png" />
