map removed, each game object handles position and movement by itself now, some game logic additions

--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -150,11 +150,12 @@
     <ClCompile Include="src\game\game-objects\Enemy.cpp" />
     <ClCompile Include="src\game\game-objects\HealthPouch.cpp" />
     <ClCompile Include="src\game\game-objects\OxygenCan.cpp" />
-    <ClCompile Include="src\game\game-objects\Consumable.cpp" />
     <ClCompile Include="src\game\game-objects\Passage.cpp" />
     <ClCompile Include="src\game\game-objects\Player.cpp" />
     <ClCompile Include="src\game\game-objects\Wall.cpp" />
     <ClCompile Include="src\game\Level.cpp" />
+    <ClCompile Include="src\game\Utils.cpp" />
+    <ClCompile Include="src\renderer\font\FontManager.cpp" />
     <ClCompile Include="src\renderer\shaders\ShaderManager.cpp" />
     <ClCompile Include="src\renderer\font\FontLoader.cpp" />
     <ClCompile Include="src\renderer\MeshFactory.cpp" />
@@ -182,12 +183,13 @@
     <ClInclude Include="src\game\game-objects\Enemy.h" />
     <ClInclude Include="src\game\game-objects\HealthPouch.h" />
     <ClInclude Include="src\game\game-objects\OxygenCan.h" />
-    <ClInclude Include="src\game\game-objects\Consumable.h" />
     <ClInclude Include="src\game\game-objects\Passage.h" />
     <ClInclude Include="src\game\game-objects\Player.h" />
     <ClInclude Include="src\game\game-objects\Wall.h" />
     <ClInclude Include="src\game\GameObject.h" />
     <ClInclude Include="src\game\Level.h" />
+    <ClInclude Include="src\game\Utils.h" />
+    <ClInclude Include="src\renderer\font\FontManager.h" />
     <ClInclude Include="src\renderer\shaders\ShaderManager.h" />
     <ClInclude Include="src\renderer\font\Font.h" />
     <ClInclude Include="src\renderer\font\FontLoader.h" />
