--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="src\renderer\MeshFactory.cpp" />
     <ClCompile Include="src\renderer\materials\BatchMaterial.cpp" />
     <ClCompile Include="src\renderer\materials\default\UIMaterial.cpp" />
+    <ClCompile Include="src\renderer\materials\default\UIButtonMaterial.cpp" />
     <ClCompile Include="src\renderer\BatchRenderer.cpp" />
     <ClCompile Include="src\application\Application.cpp" />
     <ClCompile Include="src\renderer\materials\default\DynamicObjectMaterial.cpp" />
@@ -171,6 +172,7 @@
     <ClCompile Include="src\renderer\Renderer.cpp" />
     <ClCompile Include="src\application\Window.cpp" />
     <ClCompile Include="src\renderer\Texture.cpp" />
+    <ClCompile Include="src\renderer\ui\Button.cpp" />
     <ClCompile Include="src\renderer\ui\Text.cpp" />
     <ClCompile Include="src\utils\GLUtils.cpp" />
     <ClCompile Include="src\renderer\TextureManager.cpp" />
@@ -178,6 +180,7 @@
     <ClCompile Include="src\application\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\application\ApplicationSettings.h" />
     <ClInclude Include="src\game\GameLayer.h" />
     <ClInclude Include="src\game\GameManager.h" />
     <ClInclude Include="src\game\game-objects\Enemy.h" />
@@ -188,6 +191,7 @@
     <ClInclude Include="src\game\game-objects\Wall.h" />
     <ClInclude Include="src\game\GameObject.h" />
     <ClInclude Include="src\game\Level.h" />
+    <ClInclude Include="src\game\MenuLayer.h" />
     <ClInclude Include="src\game\Utils.h" />
     <ClInclude Include="src\renderer\font\FontManager.h" />
     <ClInclude Include="src\renderer\shaders\ShaderManager.h" />
@@ -196,6 +200,7 @@
     <ClInclude Include="src\renderer\MeshFactory.h" />
     <ClInclude Include="src\renderer\materials\BatchMaterial.h" />
     <ClInclude Include="src\renderer\materials\default\UIMaterial.h" />
+    <ClCompile Include="src\renderer\materials\default\UIButtonMaterial.h" />
     <ClInclude Include="src\renderer\BatchRenderer.h" />
     <ClInclude Include="src\application\Application.h" />
     <ClInclude Include="src\renderer\materials\default\DynamicObjectMaterial.h" />
@@ -208,6 +213,7 @@
     <ClInclude Include="src\renderer\Mesh.h" />
     <ClInclude Include="src\renderer\Renderer.h" />
     <ClInclude Include="src\application\InputManager.h" />
+    <ClInclude Include="src\renderer\ui\Button.h" />
     <ClInclude Include="src\renderer\Vertex.h" />
     <ClInclude Include="src\renderer\materials\default\TextureHolderMaterial.h" />
     <ClInclude Include="src\renderer\ui\Text.h" />
