UIButtonMaterial move glm.hpp file into a header file

--- a/unk-planet-walker.vcxproj
+++ b/unk-planet-walker.vcxproj
@@ -156,12 +156,12 @@
     <ClCompile Include="src\game\Level.cpp" />
     <ClCompile Include="src\game\Utils.cpp" />
     <ClCompile Include="src\renderer\font\FontManager.cpp" />
+    <ClCompile Include="src\renderer\materials\default\UIButtonMaterial.cpp" />
     <ClCompile Include="src\renderer\shaders\ShaderManager.cpp" />
     <ClCompile Include="src\renderer\font\FontLoader.cpp" />
     <ClCompile Include="src\renderer\MeshFactory.cpp" />
     <ClCompile Include="src\renderer\materials\BatchMaterial.cpp" />
     <ClCompile Include="src\renderer\materials\default\UIMaterial.cpp" />
-    <ClCompile Include="src\renderer\materials\default\UIButtonMaterial.cpp" />
     <ClCompile Include="src\renderer\BatchRenderer.cpp" />
     <ClCompile Include="src\application\Application.cpp" />
     <ClCompile Include="src\renderer\materials\default\DynamicObjectMaterial.cpp" />
@@ -194,13 +194,13 @@
     <ClInclude Include="src\game\MenuLayer.h" />
     <ClInclude Include="src\game\Utils.h" />
     <ClInclude Include="src\renderer\font\FontManager.h" />
+    <ClInclude Include="src\renderer\materials\default\UIButtonMaterial.h" />
     <ClInclude Include="src\renderer\shaders\ShaderManager.h" />
     <ClInclude Include="src\renderer\font\Font.h" />
     <ClInclude Include="src\renderer\font\FontLoader.h" />
     <ClInclude Include="src\renderer\MeshFactory.h" />
     <ClInclude Include="src\renderer\materials\BatchMaterial.h" />
     <ClInclude Include="src\renderer\materials\default\UIMaterial.h" />
-    <ClCompile Include="src\renderer\materials\default\UIButtonMaterial.h" />
     <ClInclude Include="src\renderer\BatchRenderer.h" />
     <ClInclude Include="src\application\Application.h" />
     <ClInclude Include="src\renderer\materials\default\DynamicObjectMaterial.h" />
